tdf#106210 Apply correct constraint for calc function EFFECTIVE.

(= ODFF formula EFFECT)

Change-Id: Ib9adeece3d2f1331b80ce8eae74831420e6c2e6b